# chatgpt-auto-register

./: GOPAY_PLUS_INTEGRATION.md  JP_ROUTE_GUIDE.md  README.md  auto_register.py  config.example.json  config.py  gopay_pay.py  icloud_hme.py  mailmanage_client.py  main.py  openai_bind_email.py  openai_oauth.py  openai_pipeline.py  outlook_mail.py  outlook_manager.py  payment_protocol.py  paypal_fraudnet_baseline.json  phase2_codex.py  plus_payment.py  pyproject.toml  quick_fix.py  requirements.txt  runner.py  server.py  sms_channel.py  smsbower.py  tempmail_client.py  test_pipeline.py  web_gui.py
public/: index.html
scripts/: pre-commit-scan.py
