[project]
name = "chatgpt-auto-register"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.0",
    "bcrypt>=4.0.0",
    "beautifulsoup4>=4.9.0",
    "curl-cffi>=0.12.0",
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "pycryptodome>=3.15",
    "pyjwt>=2.0.0",
    "pysocks>=1.7.0",
    "pywin32>=305 ; sys_platform == 'win32'",
    "requests>=2.28.0",
    "urllib3>=2.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
